# pagans

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NEXT_STEPS_v0.1.0.md  README.md  SECURITY.md  SUPPORT.md  agents.md  main.py  pyproject.toml
.dev/: architecture_diagram.md  future_plan.md  implementation_plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  lint.yml  publish.yml  test.yml
docs/: CLI.md  PYPI_PUBLISHING.md  RELEASE_GUIDE.md  TEXT_MODEL_GUIDANCE.md
examples/: __init__.py  anthropic_example.py  google_example.py  openai_example.py  provider_factory_example.py
notebooks/: README.md  pagans_anthropic_optimizer.ipynb  pagans_google_optimizer.ipynb  pagans_openai_optimizer.ipynb  pagans_openrouter_optimizer.ipynb  pagans_quickstart.ipynb  pagans_zai_optimizer.ipynb
src/pagans/: __init__.py  __version__.py  _version.py  cli.py  client.py  constants.py  core.py  exceptions.py  models.py
src/pagans/clients/: __init__.py  anthropic.py  base.py  google.py  openai.py  openai_compatible.py  openrouter.py  zai.py
src/pagans/config/: __init__.py  provider_config.py
src/pagans/models/: __init__.py  registry.py
src/pagans/optimizer_prompts/: __init__.py  anthropic.py  base.py  google.py  openai.py  xai.py
src/pagans/optimizer_prompts/templates/: anthropic.jinja  base.jinja  google.jinja  openai.jinja  xai.jinja
src/pagans/providers/: __init__.py  factory.py
src/prompt_optimizer/: __init__.py  client.py  constants.py  core.py  models.py
src/prompt_optimizer/optimizer_prompts/: __init__.py  anthropic.py  base.py  google.py  meta.py  mistral.py  openai.py
tests/: __init__.py  test_cli.py  test_client.py  test_core.py  test_edge_cases.py  test_integration.py  test_models.py  test_optimizer_prompts.py  test_performance.py
